# simple-media-player

./: .gitignore  Makefile  README.md  README.rst  dev_requirments.txt  pyproject.toml  remote_controller.service  requirments.txt
ir_reciever/ir_reciever/: reciever.py
remote_control/: setup.py
remote_control/remote_control/: controller.py
remote_control/remote_control.egg-info/: PKG-INFO  SOURCES.txt
remote_control/remote_control/commands/: change_episode.py
remote_controller/: remote_controller.service  setup.py
remote_controller/remote_controller/: __main__.py  consts.py  ir_reciever.py  utils.py
remote_controller/remote_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
remote_controller/remote_controller/commands/: change_episode.py  command.py  power_off.py  rewind_player.py  toggle_play.py
tests/: consts.py  test_series_player.py  utils.py
vlc_controller/: media_player.py  series_player.py  setup.py
vlc_controller/tests/: conftest.py  consts.py  test_series_player.py  utils.py
vlc_controller/vlc_controller/: gui.py  media_player.py  reciever.py  series_player.py
vlc_controller/vlc_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
