[tool.poetry]
name = "vlc_controller"
version = "0.1.0"
description = ""
authors = ["Nir Geller <gnir.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-vlc = "^3.0.12118"
flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.29.0"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.11b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
